--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,10 @@
 .starter-template > h1, .starter-template > p {
   text-align: center;
 }
+
+.card-icon {
+  font-size: 4.5em;
+  padding: 0.5em 1em;
+  text-align: center;
+  border-bottom: 1px solid rgba(0,0,0,.125);
+}
