--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,20 @@
   text-align: center;
   border-bottom: 1px solid rgba(0,0,0,.125);
 }
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  margin-bottom: 80px;
+}
+.footer {
+  position: fixed;
+  font-size: 80%;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  background-color: #f5f5f5;
+}
